<resources xmlns:tools="http://schemas.android.com/tools"
  tools:ignore="MissingTranslation" >
    <string name="image">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="document">Document</string>
    <string name="action_bar_title">Picture</string>
    <string name="done">Done</string>
    <string name="upload">Upload</string>
    <string name="camera_txt">Taking Pictures</string>
    <string name="multi_img_btn_title">All photos</string>
    <string name="folder_all">All Images</string>

    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="image_amount_limit">You can select only 10 photos at a time</string>

    <string name="select_status">Select Status</string>

    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="group_profile">Group Profile</string>
    <string name="leave_group_alert">Are you sure you want to leave this group? You will no longer receive new messages.</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="leave_group">Leave Group</string>
    <string name="change_name">Change Name</string>
    <string name="change_group_photo">Change Group Photo</string>
    <string name="new_message">Send a message</string>
    <string name="view_profile">View Profile</string>
    <string name="remove_user">Remove this Person</string>
    <string name="new_group">New Group</string>
    <string name="search">Search</string>

    <string name="create_admin_alert">Are you sure you want to leave the Group? Before leaving, select any of the member listed below as admin of this Group.</string>

    <string name="allow_read_external_storage">You need to provide storage permission to this application to read the content from external storage.</string>
    <string name="allow_write_external_storage">You need to provide storage permission to this application to write content to external storage.</string>
    <string name="allow_camera_permission">You need to provide camera access to click pictures and record videos using this application.</string>

    <string name="storage_settings_message">This feature needs storage permission, please open the App Info and provide storage permission.</string>
    <string name="camera_settings_message">This feature needs camera permission, please open the App Info and provide camera permission.</string>
    <string name="open_app_info">App Info</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="block_user_alert">Are you sure you want to block this user? The blocked contacts will no longer be able to send you messages.</string>
    <string name="block_user">Block User</string>
    <string name="block">Block</string>

    <string name="unblock_user_alert">Unblock %1$s to send a message.</string>
    <string name="unblock">Unblock</string>
    <string name="unblock_user" translatable="false">%1$s\u0020%2$s</string>

    <string name="user_typing">%1$s is typing&#8230;</string>
    <string name="typing">typing&#8230;</string>
    <string name="lastseen_today">Last seen today at time</string>
    <string name="lastseen_date">Last seen on date at time</string>

    <string name="recent">Recent</string>
    <string name="contacts">Contacts</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="members_count_text">%1$d members</string>
    <string name="self_member_text">You</string>
    <string name="profile_activity_label">Profile</string>

    <string name="type_message">Type a message&#8230;</string>
    <string name="left_group_message">You are no longer a participant in this group</string>
    <string name="no_contacts">No contacts available</string>
    <string name="no_group">No groups available</string>
    <string name="no_blocked_contacts">You don\'t have any blocked contacts</string>
    <string name="no_recent_chats">Try make friends and start new conversation</string>
    <string name="no_data_msg">No entry available</string>

    <string name="blocked_users">Blocked Users</string>
    <string name="default_language">Default Language</string>
    <string name="notifications">Notifications</string>
    <string name="im">I\'m</string>
    <string name="deleted_user">Deleted User</string>
    <string name="this_user">this user</string>
    <string name="add_members">Add Members</string>
    <string name="member">Members</string>
    <string name="active_time_text">%1$s\u0020%2$s</string>
    <string name="active">Active</string>
    <string name="group_name_hint">Name (ex: Family)</string>
    <string name="search_contacts">Search contacts to add </string>
    <string name="enter_group_name">Please enter Group name</string>
    <string name="member_count_error_msg">Select at least two contacts to create Group</string>
    <string name="file_size_limit">Please select a file less than 25Mb</string>
    <string name="admin_text">admin</string>
    <string name="blocked_message">This user is blocked. Unblock this user to send a message.</string>
    <string name="retry">RETRY</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="conversation">Conversation</string>

    <string name="delete_conversation">Delete Conversation</string>
    <string name="delete_conversation_alert">Are you sure you want to delete this conversation? Once you delete, it cannot be undone.</string>
    <string name="delete_conversation_message">Deleting conversation</string>

    <string name="clear_conversation">Clear Conversation</string>
    <string name="clear_conversation_alert">Are you sure you want to clear this conversation? Once you clear, it cannot be undone.</string>
    <string name="clear_conversation_message">Clearing conversation</string>
    <string name="menu_item_delete">Delete</string>

    <string name="delete_messages_alert">Are you sure you want to delete %1$s? Once you delete, it cannot be undone.</string>
    <string name="delete_messages">Delete Messages</string>

    <plurals name="message_count">
        <item quantity="one">%1$d message</item>
        <item quantity="other">%1$d messages</item>
    </plurals>
    <string name="user_blocked_message">User has been blocked successfully</string>
    <string name="user_unblocked_message">User has been unblocked successfully</string>
    <string name="saving">Saving</string>
    <string name="uploading">Uploading</string>
    <string name="creating_group">Creating Group</string>
    <string name="people">People</string>
    <string name="group_conversation">Group Conversations</string>
    <string name="upgrade_alert_title">New Version Available</string>
    <string name="upgrade_alert_message">Please, update the app to the new version for uninterrupted usage..</string>
    <string name="upgrade_button_title">Update Now</string>
    <string name="cancel_button_title">No, Thanks</string>
    <string name="menu_item_copy">Copy</string>
    <string name="text_copied">Copied to clipborad</string>
</resources>

