<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright (c) 2016 BigStep Technologies Private Limited.
  ~
  ~   You may not use this file except in compliance with the
  ~   SocialEngineAddOns License Agreement.
  ~   You may obtain a copy of the License at:
  ~   https://www.socialengineaddons.com/android-app-license
  ~   The full copyright and license information is also mentioned
  ~   in the LICENSE file that was distributed with this
  ~   source code.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:textSize="@dimen/body_large_font_size"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/conversation"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:paddingTop="@dimen/padding_5dp"
        android:paddingBottom="@dimen/padding_5dp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="@dimen/body_medium_font_size"
        android:clickable="true"
        android:id="@+id/delete_conversation"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clear_conversation"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:paddingTop="@dimen/padding_5dp"
        android:paddingBottom="@dimen/padding_5dp"
        android:text="@string/clear"
        android:textSize="@dimen/body_medium_font_size"
        android:clickable="true"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/block_conversation"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginRight="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:paddingTop="@dimen/padding_5dp"
        android:paddingBottom="@dimen/padding_20dp"
        android:textSize="@dimen/body_medium_font_size"
        android:text="@string/block"
        android:clickable="true"
        android:textColor="@color/black"/>

</LinearLayout>